.dev-workstream/fails/batch-20-keyed-topics/commit-2/tests/CycloneDDS.Runtime.Tests/Gen/KeyedTestMessage.idl
// Auto-generated IDL for KeyedTestMessage by CycloneDDS C# Bindings
// Generated on: 2026-01-20 08:33:46 UTC
#ifndef _CYCLONEDDS_GENERATED_KEYEDTESTMESSAGE_IDL_
#define _CYCLONEDDS_GENERATED_KEYEDTESTMESSAGE_IDL_

module CycloneDDS {
    module Runtime {
        module Tests {
            @appendable
            struct KeyedTestMessage {
                @key int32 sensorId;
                int32 value;
            };

        };
    };
};

#endif // _CYCLONEDDS_GENERATED_KEYEDTESTMESSAGE_IDL_
